--- a/style.css
+++ b/style.css
@@ -819,6 +819,7 @@ h4 {
 
 .bg-banniere {
     background-image: url("img/agence-la-panthere.jpg");
+    box-sizing: border-box;
 }
 
 .bg-presentation {
