--- a/style.css
+++ b/style.css
@@ -530,10 +530,24 @@ button {
     opacity: 1;
 }
 
+.col-sm-6 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 a[data-lightbox] {
     position: relative;
     display: block;
     text-align: center;
+}
+
+a[data-lightbox] {
+    
+    box-sizing: border-box;
+    margin: 0;
+    height: 320px;
+    width: 320px;
 }
 
 a[data-lightbox]:hover::before {
