--- a/style.css
+++ b/style.css
@@ -830,15 +830,16 @@ h4 {
 .bg-lines-h2-bg {
     background-image: url("img/lines-h2-bg.png");
 }
-
+/* BANNIERE test
 .bg-banniere {
     background-image: url("img/agence-la-panthere.jpg");
     box-sizing: border-box;
 }
-
+*/
 .bg-presentation {
     background-image: url("img/image-de-presentation.jpg");
 }
+
 
 @media (max-width: 1024px) {
     .bloc {
@@ -861,17 +862,26 @@ h4 {
     .nav-center.navbar .nav {
         max-width: 100%
     }
+    
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
     .b-parallax {
         background-attachment: scroll;
     }
+    .bg-banniere {
+        background-image: url("img/agence-la-panthere2.jpg");
+        box-sizing: border-box;
+    }
 }
 
 @media only screen and (min-width: 1024px) and (max-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
     .b-parallax {
         background-attachment: scroll;
+    }
+    .bg-banniere {
+        background-image: url("img/agence-la-panthere3.jpg");
+        box-sizing: border-box;
     }
 }
 
@@ -1045,6 +1055,12 @@ h4 {
         width: 180px;
         height: 320px;
     }
+    /* TEST img responsive */
+    .bg-banniere {
+        background-image: url("img/agence-la-panthere.jpg");
+        box-sizing: border-box;
+    }
+    
 }
 
 @media (max-width: 400px) {
