Ajout de width et height au img de (col-6)

--- a/style.css
+++ b/style.css
@@ -536,6 +536,11 @@ button {
     align-items: center;
 }
 
+.col-sm-6 img {
+    width: 320px;
+    height: 320px;
+}
+
 a[data-lightbox] {
     position: relative;
     display: block;
