--- a/style.css
+++ b/style.css
@@ -302,18 +302,16 @@ a:hover {
 }
 
 .navbar-brand img {
-    max-height: 200px;
-    margin: 0 5px 0 0;
+    height: 40px;
+    width: 217px;
+    margin: 0;
     display: inline;
 }
-
+/*
 .navbar-brand img[src$=svg] {
     min-width: 100px;
 }
-
-.nav-center .navbar-brand img {
-    margin: 0;
-}
+*/
 
 .navbar .nav {
     padding-top: 2px;
@@ -433,6 +431,11 @@ nav .caret {
     border-bottom-color: transparent;
     margin: 6px -5px 0 0!important;
     float: right;
+}
+
+.center-block {
+    width: 100px;
+    height: 100px;
 }
 
 .mg-md {
