--- a/style.css
+++ b/style.css
@@ -1079,6 +1079,10 @@ h4 {
         padding-left: 0;
         padding-right: 0;
     }
+    .bg-banniere {
+        background-image: url("img/agence-la-panthere\(mini-mobile\).jpg");
+        box-sizing: border-box;
+    }
 }
 
 @media (max-width: 767px) {
