--- a/style.css
+++ b/style.css
@@ -123,7 +123,6 @@ a:hover {
 .d-bloc .navbar a,
 .d-bloc .navbar-brand,
 .d-bloc a .icon-sm,
-.d-bloc a .icon-md,
 .d-bloc a .icon-lg,
 .d-bloc a .icon-xl,
 .d-bloc h1 a,
@@ -721,6 +720,7 @@ p {
 .social {
     max-width: 400px;
     margin: auto auto auto auto;
+    color: #575757;
 }
 
 h2 {
