--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -7595,7 +7595,7 @@ button.close {
     text-align: center;
     text-shadow: 0 1px 2px rgba(0, 0, 0, .6);
     filter: alpha(opacity=50);
-    opacity: .5
+    opacity: .5;
 }
 
 .carousel-control.left {
@@ -7604,7 +7604,7 @@ button.close {
     background-image: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, .5)), to(rgba(0, 0, 0, .0001)));
     background-image: linear-gradient(to right, rgba(0, 0, 0, .5) 0, rgba(0, 0, 0, .0001) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#80000000', endColorstr='#00000000', GradientType=1);
-    background-repeat: repeat-x
+    background-repeat: repeat-x;
 }
 
 .carousel-control.right {
@@ -7615,7 +7615,7 @@ button.close {
     background-image: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, .0001)), to(rgba(0, 0, 0, .5)));
     background-image: linear-gradient(to right, rgba(0, 0, 0, .0001) 0, rgba(0, 0, 0, .5) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#80000000', GradientType=1);
-    background-repeat: repeat-x
+    background-repeat: repeat-x;
 }
 
 .carousel-control:focus,
@@ -7624,7 +7624,7 @@ button.close {
     text-decoration: none;
     filter: alpha(opacity=90);
     outline: 0;
-    opacity: .9
+    opacity: .9;
 }
 
 .carousel-control .glyphicon-chevron-left,
@@ -7742,6 +7742,7 @@ button.close {
         bottom: 20px
     }
 }
+
 
 .btn-group-vertical>.btn-group:after,
 .btn-group-vertical>.btn-group:before,
