--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ a:hover {
 }
 
 .texture-paper::before {
-    background: url("img/texture-paper.png") repeat;
+    background: url("img/texture-paper.png");
     background-size: 280px 280px;
 }
 
@@ -792,7 +792,7 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #575757;
 }
 
 .tc-white {
