--- a/css/et-line.css
+++ b/css/et-line.css
@@ -108,8 +108,9 @@
 .et-icon-wallet,
 .et-icon-wine {
     font-family: et-line;
-    /* test none*/
-    speak-as: auto;
+    /* test none
+    speak-as: none;
+    */
     font-style: normal;
     font-weight: 400;
     font-variant: normal;
